[package]
name = "blue_sky_dao"
version = "0.1.0"
edition = "2021"

[dependencies]
blue_sky_entity = { path = "../blue_sky_entity" }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
mysql = "25.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
flexi_logger = "0.17"
once_cell = "1.10"
toml = "0.7"