[package]
name = "blue_sky_web"
version = "0.1.0"
edition = "2021"

[dependencies]
blue_sky_macro = { path = "../blue_sky_macro" }
serde = { version = "1.0.216", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
flexi_logger = "0.17"
regex = "1.11.1"
threadpool = "1.8"
lazy_static = "1.4"
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
derive_builder = "0.10"